Attempt to fix swipe issue on mobile.

--- a/templates/src/scss/_modal.scss
+++ b/templates/src/scss/_modal.scss
@@ -161,7 +161,7 @@
             }
         }
         .modal-body {
-            padding : 0 20px;
+            padding : 0 20px 100px;
             .entry-content {
                 padding    : 0;
                 margin-top : 60px;
